crates/elm-codegen-derive-tests/tests/compile_fail/missing_module.rs
use elm_codegen_core::ElmType;

#[derive(ElmType)]
pub struct NoModule {
    pub id: String,
}

fn main() {}
